--- a/index.html
+++ b/index.html
@@ -132,6 +132,29 @@
     </div>
     <div class="project">
       <div class="project__img-container">
+                                  <img class="project__img" src="img/vision.png" alt="Product Vision Inspection System Screenshot">
+      </div>
+      <div class="project__details">
+        <h2 class="project__name">
+          Product Vision Inspection System
+        </h2>
+        <div class="skill-tags">
+            <div class="skill-tag">OpenCV</div>
+            <div class="skill-tag">Python</div>
+            <div class="skill-tag">C++</div>
+            <div class="skill-tag">Raspberry Pi</div>
+            <div class="skill-tag">Numpy</div>
+        </div>
+        <p>
+          Designed and developed a vision system to determine the quality and physical placement of a strip relative to the empty space on a card.
+          <div>
+            <a class="btn" href="https://github.com/144a/BlueLineDetect" target="_blank">View Project</a>
+          </div>
+        </p>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__img-container">
                                   <img class="project__img" src="img/stringart.png" alt="String Art Generator Screenshot">
       </div>
       <div class="project__details">
