Andy Gatza (AGV) Added final descriptions.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="skill-tag">Numpy</div>
         </div>
         <p>
-          Designed and developed a vision system to determine the quality and physical placement of a strip relative to the empty space on a card.
+          A program that incorporates a vision system to determine the quality and physical placement of a sub-component relative to the empty space on a product. While initially created to support a needed quality assurance system at my job working as a manufacture technician, it was further expanded and revised upon, with a paper currently being written to publish. The Vision solution is based on discrete analysis of an image in real time using a Raspberry Pi computer, proving extremely difficult to work past the limited resources available to me. Even with the low-cost hardware, 60 fps is achieved at normal operation, which resulted to its successful consideration to be used within the Abbott manufacturing process.
           <div>
             <a class="btn" href="https://github.com/144a/BlueLineDetect" target="_blank">View Project</a>
           </div>
@@ -165,7 +165,7 @@
             <div class="skill-tag">Java</div>
         </div>
         <p>
-          A program produced for a final assignment that visualizes a simple mathematical demonstration of the multiplication tables and how truly simple math can produce amazing and complex results. Originally developed as a  Java program, it was then migrated to ez80 assembly to be run on a TI-84 Plus CE Calculator. This conversion was done with multiple factors in mind to increase speed in comparison to the assembler-output of the Java code. The project involved a complex understanding of ez80 processor and how floating point numbers are handled in the Texas Instruments subroutines.
+          A program that generates a string-approximation of an image using differential integrals. While normally most programs of this nature follow a simple two-frame computational loop while destroying the original image data, this program does the numerical integration required to determine the next best line to draw. The design incorporates a variety of configurable inputs to allow for both better quality and improved human reproduce-ability. The instructions for human reproduction of the output image are also generated, and can be stepped through for ease-of-use on a separate included program.
           <div>
             <a class="btn" href="https://github.com/144a/stringArtGenerator" target="_blank">View Project</a>
           </div>
