--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="skill-tag">Numpy</div>
         </div>
         <p>
-          A program that incorporates a vision system to determine the quality and physical placement of a sub-component relative to the empty space on a product. While initially created to support a needed quality assurance system at my job working as a manufacture technician, it was further expanded and revised upon, with a paper currently being written to publish. The Vision solution is based on discrete analysis of an image in real time using a Raspberry Pi computer, proving extremely difficult to work past the limited resources available to me. Even with the low-cost hardware, 60 fps is achieved at normal operation, which resulted to its successful consideration to be used within the Abbott manufacturing process.
+          A program that incorporates a vision system to determine the quality and physical placement of a sub-component relative to the empty space on a product. While initially created to support a needed quality assurance system at my job working as a manufacture technician, it was further expanded and revised upon, with a paper currently being written to publish. The Vision solution is based on discrete analysis of an image in real time using a Raspberry Pi computer, proving extremely difficult to work past the limited resources available to me. Even with the low-cost hardware, 60 fps is achieved at normal operation, which resulted to its successful consideration to be used within the manufacturing process.
           <div>
             <a class="btn" href="https://github.com/144a/BlueLineDetect" target="_blank">View Project</a>
           </div>
