Added correct github link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
                               <a
             class="socials__link"
-            href="http://github/144a"
+            href="https://github/144a"
             target="_blank"
           >
               <i class="icon-github-circled"></i>
