--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="lead">
     <h1 class="lead__heading">Hi, I'm M̶e̶a̶t̶l̶o̶a̶f̶ Andy Gatza </h1>
     <div class="lead__sub">
-      I'm a college senior currently studying Computer Science at Depaul University and work as a Manufacturing Technician at Abbott. I am an excellent team player and leader, and am known for being eclectic and unique in both my professional work and in my vivid personality. I specialize in Computer Vision development, with a heavy focus in low-cost and efficient projects allowing for robust and expandable implementations. When not programming, I enjoy repairing old electronics, collecting video games, and producing videos with old professional broadcast equipment.
+      I'm a college senior currently studying Computer Science at Depaul University and work as a Software Engineer at the Depaul IDLab. I am an excellent team player and leader, and am known for being eclectic and unique in both my professional work and in my vivid personality. I specialize in Computer Vision development, with a heavy focus in low-cost and efficient projects allowing for robust and expandable implementations. When not programming, I enjoy repairing old electronics, collecting video games, and producing videos with old professional broadcast equipment.
     </div>
 
     <div class="call-to-action">
@@ -74,7 +74,7 @@
     <div class="timeline__line"></div>
       <div class="timeline__item">
         <div class="experience">
-          <header class="experience__header">Feb 2021 - Present</header>
+          <header class="experience__header">Feb 2021 - Feb 2021</header>
           <h2 class="experience__name">
             Manufacture Technician - Abbott
           </h2>
